<resources>
    <string name="app_name">虚拟管理</string>
    <string name="main_tab_name_message">消息</string>
    <string name="main_tab_name_management">管理</string>
    <string name="main_tab_name_workbench">工作台</string>
    <string name="main_tab_name_my">我的</string>
    <string name="newmessage">发送消息</string>
    <string name="signin">签到</string>
    <string name="doc">查资料</string>
    <string name="knowledge">知识库</string>
    <string name="phone_contact">手机联系人</string>
    <string name="project">项目</string>
    <string name="project_name">工程名称</string>
    <string name="project_create">创建项目</string>
    <string name="project_edit">修改项目</string>
    <string name="project_unit">施工单位</string>
    <string name="project_company">施工企业</string>
    <string name="project_manager">项目经理</string>
    <string name="project_starttime">开工日期</string>
    <string name="project_alltime">总工期</string>
    <string name="project_location">工程地点</string>
    <string name="project_getlocation">定位地点</string>
    <string name="project_built_area">建筑面积(m)</string>
    <string name="project_contract_cost">合同造价(元)</string>
    <string name="project_delete">删除该项目组织</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_document">文档管理</string>
    <string name="actionbar_title_login">登陆</string>
    <string name="actionbar_title_about">关于虚拟管理</string>
    <string name="actionbar_title_user_center">用户中心</string>
    <string name="actionbar_title_my_information">我的资料</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="actionbar_title_shake">摇一摇</string>
    <string name="actionbar_title_search">搜索</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="friend_home">查看对方资料</string>
    <string name="myfriend">我的好友</string>
    <string name="progress_submit">正在提交…</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="clean_cache_mes">是否清空缓存?</string>
    <string name="draft_tweet_message">是否保存为草稿?</string>
    <string name="clearwords">是否清空内容?</string>
    <string name="choose_picture">选择图片</string>
    <string name="tip_content_empty">内容不能为空</string>
    <string name="tip_content_too_long">内容太长</string>
    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录  %s</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="send_message_to">发送私信给:</string>
    <string name="hint_user_name">对方昵称</string>
    <string name="hint_message">私信内容</string>
    <string name="tip_message_public_success">发送成功</string>
    <string name="tip_message_public_faile">发送失败</string>
    <string name="send_to">发给</string>
    <string name="message_count">%s条私信</string>
    <string name="confirm_delete_message">确定要删除和\"%s\"的所有私信吗?</string>
    <string name="confirm_delete_one_message">确定要删除这条私信吗?</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_delete_faile">无法删除</string>
    <string name="copy">复制</string>
    <string name="repost">转发</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>
    <string name="footer_type_loading">正在加载中…</string>
    <string name="footer_type_error">加载失败</string>
    <string name="footer_type_net_error">网络错误</string>
    <string name="footer_type_not_more">没有更多数据</string>
    <string name="blog">我的博客</string>
    <string name="information">资料</string>
    <string name="qrcode">二维码</string>
    <string name="message">我的消息</string>
    <string name="team">我的团队</string>
    <string name="AboutUs">关于我们</string>
    <string name="note">便签</string>
    <string name="my_note">我的便签</string>
    <string name="str_feedback">反馈</string>
    <string name="bookmarks">收藏夹</string>
    <string name="user_score">积分</string>
    <string name="active">好友圈</string>
    <string name="activities">活动</string>
    <string name="scan">扫一扫</string>
    <string name="friends">同城</string>
    <string name="find_oscer">找人</string>
    <string name="shake">摇一摇</string>
    <string name="add_notebook">新建便签</string>
    <string name="submit_notebook">保存便签</string>
    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查新版本</string>
    <string name="about">关于虚拟管理</string>
    <string name="feedback">意见反馈</string>
    <string name="exit">退出</string>
    <string name="grade">去评分</string>
    <string name="notice_accept">接收新通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>
    <string name="tip_logout_success">注销成功</string>
    <string name="oscsite">官网</string>
    <string name="knowmore">了解更多</string>
    <string name="gitapp">Git客户端</string>
    <string name="copyright">Copyright © 2016  All rights reserved.</string>
    <string name="tip_save_image_suc">图片已保存(手机相册-> osc_img)</string>
    <string name="tip_save_image_faile">无法保存图片</string>
    <string name="tip_load_image_faile">加载图片失败</string>
    <string name="down_state">正在下载：%s</string>
    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>
    <string name="event_start_time">开始：%s</string>
    <string name="event_end_time">结束：%s</string>
    <string name="event_location">位置：%s</string>
    <string name="report">举报</string>
    <string name="report_link">链接地址</string>
    <string name="report_reson">举报原因</string>
    <string name="hint_report_desc">其他原因</string>
    <string name="tip_report_success">举报成功</string>
    <string name="tip_report_faile">举报失败</string>
    <string name="tip_double_click_exit">再次点击退出虚拟管理</string>
    <string name="team_dynamic">团队动态</string>
    <string name="actionbar_dynamic_detail">动态内容</string>
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_et_hint">我们将为您不断改进</string>
    <string name="str_feedback_contact">截图描述：（可选）</string>
    <string name="str_feedback_contact_hint">方便我们给您答复</string>
    <string name="str_feedback_succeed">谢谢您的反馈，我们会仔细阅读并及时处理</string>
    <string name="str_feedback_tip">我们会仔细阅读您的反馈，并尽早给您回复。感谢您的理解与支持。</string>
    <string name="str_feedback_title">用户反馈</string>
    <string name="str_team_userinfo">用户主页</string>
    <string name="str_team_select_team">选择团队</string>
    <string name="str_team_my_issue">我的任务</string>
    <string name="actionbar_title_select_friends">选择&#064;好友</string>
    <string name="select_friends_search">搜索</string>
    <string name="select_friends_noresult">无结果</string>
    <string name="select_friends_empty">暂无好友</string>
    <string name="select_friends_max_tips">最多只能选%1$d个好友哦</string>
    <string name="str_feedback_error">程序错误</string>
    <string name="str_feedback_function">功能建议</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="str_action_submic">确定</string>
    <string name="str_action_cancle">取消</string>
    <string name="pub_tweet_required_camera_tip">在设置-应用-开源中国权限中允许拍摄照片，以正常使用发动弹功能</string>
    <string name="pub_tweet_required_album_tip">在设置-应用-开源中国权限中允许访问你设备上的照片，以正常使用发动弹功能</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="lable_about_title">相关文章</string>
    <string name="lable_software">相关软件</string>
    <string name="vote_up">顶</string>
    <string name="vote_down">踩</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="createProject">创建项目</string>
    <string name="btnBack">返回</string>
    <string name="myGroup">我的群组</string>
    <string name="discussiongroup">讨论组</string>
    <string name="createGroup">创建讨论组</string>
    <string name="findPwd">找回密码</string>
    <string name="pass_word">密码</string>
    <string name="acc_managerproject">项目账户管理</string>
    <string name="projectadver">项目头像</string>
</resources>