<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray2"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <cn.cassan.pm.widget.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white40"
        android:clickable="true"
        app:ImageLeft="@drawable/rp_back_arrow_white"
        app:TextLeft="@string/btnBack"
        app:TitleText="@string/findPwd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/phone"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_pressed"/>

        <EditText
            android:id="@+id/phonenum"
            style="@style/mLogist_EditText"
            android:layout_marginLeft="15dp"
            android:hint="@string/phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:src="@drawable/code"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_pressed"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/verification_Code"
                style="@style/mLogist_EditText"
                android:layout_marginLeft="15dp"
                android:hint="@string/verification_code"/>

            <TextView
                android:id="@+id/send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:minWidth="110dp"
                android:text="@string/send_code"
                android:textColor="@drawable/tv_blue_select"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/mLogist_Button"
        android:layout_margin="30dp"
        android:text="下一步"
        />
</LinearLayout>