<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey"
              android:orientation="vertical"
              tools:context="cn.cassan.pm.ui.contact.MyGroupActivity">


    <cn.cassan.pm.widget.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white40"
        android:clickable="true"
        app:ImageLeft="@drawable/rp_back_arrow_white"
        app:TextLeft="@string/btnBack"
        app:TextRight="@string/createGroup"
        app:TitleText="@string/myGroup"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/MyGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="click"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/myGroup"
                android:textColor="@drawable/word_2blue"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/btn_slide_sel"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DiscussionGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="click"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/discussiongroup"
                android:textColor="@drawable/word_2blue"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/btn_slide_sel"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>