<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_create_project"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
    >

    <cn.cassan.pm.widget.TitleView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white40"
        android:clickable="true"
        app:ImageLeft="@drawable/rp_back_arrow_white"
        app:TextLeft="@string/btnBack"
        app:TitleText="@string/createProject"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#F4F5F6"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <cn.cassan.pm.widget.InfoItemLayout
                android:id="@+id/tv_project_name"
                style="@style/InfoItemLayout"
                app:LeftText="@string/project_name"
                app:TopLongLine="true"/>

            <cn.cassan.pm.widget.InfoItemLayout
                android:id="@+id/tv_project_location"
                style="@style/InfoItemLayout"
                app:LeftText="@string/project_location"
                app:TopLongLine="true"
                app:hintText="必填"
                />

            <cn.cassan.pm.widget.InfoItemLayout
                android:id="@+id/tv_project_unit"
                style="@style/InfoItemLayout"
                app:LeftText="@string/project_unit"
                app:TopLongLine="true"/>

            <cn.cassan.pm.widget.InfoItemLayout
                android:id="@+id/tv_project_manager"
                style="@style/InfoItemLayout"
                app:LeftText="@string/project_manager"
                app:TopLongLine="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#F4F5F6"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                >

                <TextView
                    android:id="@+id/member_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="项目部成员（6）"
                    android:textColor="#5494d2"
                    android:textSize="19sp"/>

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/member_num"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/atleast_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:paddingTop="5dp"
                    android:text="新项目至少需要6人"
                    android:textColor="@color/gray_pressed"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/addmember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:layout_gravity="center|end"
                    android:gravity="center|end"
                    android:paddingBottom="10dp"
                    android:text="添加"
                    android:textColor="#5494d2"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/memberlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray2"
        android:cacheColorHint="@android:color/transparent"
        android:dividerHeight="1dp"
        android:overScrollMode="never"
        android:paddingBottom="13dp"
        android:scrollbars="none"/>

    <Button
        android:id="@+id/btn_createProject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#447fcd"
        android:text="立即创建项目"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</LinearLayout>
