<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_linear_color"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="虚拟管理V1.0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:orientation="horizontal">


            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/phone"/>

            <View

                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_pressed"/>


            <cn.cassan.pm.widget.MyEditText
                android:id="@+id/phonenum"
                style="@style/mLogist_EditText"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:hint="@string/phone_number"
                android:inputType="textPassword"
                android:maxLength="11"
                android:singleLine="true"
                app:drawRight="@drawable/see_num_selector"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/code"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_pressed"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/verification_Code"
                    style="@style/mLogist_EditText"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/verification_code"/>

                <TextView
                    android:id="@+id/send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:minWidth="110dp"
                    android:text="@string/send_code"
                    android:textColor="@drawable/tv_blue_select"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">


            <ImageView

                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/password"/>

            <View

                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_pressed"/>

            <cn.cassan.pm.widget.MyEditText
                android:id="@+id/password"
                style="@style/mLogist_EditText"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:singleLine="true"
                app:drawRight="@drawable/see_num_selector"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/mLogist_Button"
        android:layout_margin="30dp"
        android:text="@string/register"
        />
</LinearLayout>